TEST_PROGRAMS/INVALID/brendan_gordon/interleaved.min
var a: int;
x = 5+2;
var b: float;
y = 7*y;

